<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentsComprension.Actividad_comp_4_instruccionesFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textviewReproducirInstrucc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/adamina"
        android:text="@string/Reproducir_instrucciones"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="@dimen/textSize_reproducir"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_playInstrucciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/adamina"
        android:text="@string/Instrucciones"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="@dimen/textSize_botones"
        app:iconSize="@dimen/iconSize_botones"
        app:icon="@drawable/icon_play"
        app:iconGravity="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textviewReproducirInstrucc" />

    <TextView
        android:id="@+id/textviewInstrucc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/kisspngspeechpantone5"
        android:fontFamily="@font/adamina"
        android:text="@string/comp_4_instrucciones"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="@dimen/textSize_Instrucciones_instr"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_playInstrucciones" />

    <TextView
        android:id="@+id/textviewReproducirEjemplo"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/adamina"
        android:text="@string/Reproducir_ejemplo"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="@dimen/textSize_reproducir"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textviewInstrucc" />

    <Button
        android:id="@+id/btn_playEjemplo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/adamina"
        android:text="@string/Ejemplo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="@dimen/textSize_botones"
        app:iconSize="@dimen/iconSize_botones"
        android:visibility="visible"
        app:icon="@drawable/icon_play"
        app:iconGravity="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textviewReproducirEjemplo" />

    <Button
        android:id="@+id/btn_pararInstrucciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/kisspngspeechpantone4"
        android:fontFamily="@font/adamina"
        android:text="@string/Parar"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="@dimen/textSize_botones"
        app:iconSize="@dimen/iconSize_botones"
        android:visibility="invisible"
        app:icon="@drawable/stopbutton"
        app:iconGravity="textEnd"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>