<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF59D"
    tools:context=".FragmentsIdentificación.juego_presentarFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btn_iniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/adamina"
        android:text="@string/Iniciar"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="28sp"
        android:visibility="visible"
        app:icon="@drawable/icon_play"
        app:iconGravity="textEnd"
        app:iconSize="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_parar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/kisspngspeechpantone4"
        android:fontFamily="@font/adamina"
        android:text="@string/Parar"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="28sp"
        android:visibility="invisible"
        app:icon="@drawable/stopbutton"
        app:iconGravity="textEnd"
        app:iconSize="28dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />


    <TextView
        android:id="@+id/textViewAciertosid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/verde_aciertos"
        android:fontFamily="@font/adamina"
        android:textSize="28sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_iniciar"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewFallasteid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/healthwarm1"
        android:fontFamily="@font/adamina"
        android:textSize="28sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_iniciar"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textviewInstrucc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@color/kisspngspeechpantone5"
        android:fontFamily="@font/adamina"
        android:text="@string/ident_1_juego_instrucciones"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="34sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_instrucciones"
        tools:visibility="invisible" />


    <Button
        android:id="@+id/btn_instrucciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/adamina"
        android:text="@string/Instrucciones"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        android:visibility="visible"
        app:icon="@android:drawable/ic_menu_help"
        app:iconGravity="textEnd"
        app:iconSize="28dp"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_iniciar"
        tools:visibility="invisible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerJuegoId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_iniciar" />

</androidx.constraintlayout.widget.ConstraintLayout>